Version 0.0.4
- Paramset persistance has to be enabled if required
- Raise exception in `getValue` if queried parameter does not exist
- Device addresses are now case insensitive
- Add callback-support based on fired events

Version 0.0.3 (2019-12-25)
- Fix `getParamset` for `MASTER`, returns default or value from `putParamset`
- Add `putParamset` method
- Refactoring

Version 0.0.2 (2019-12-16)
- Add `getParamset` method
- Add `devices` argument for Server-object
- Fire events when `setValue` has been used
- Improve (de)init
- Code cleanup

Version 0.0.1 (2019-12-14)
- Initial version