@@ -1,4 +1,5 @@
 include pydevccu/device_descriptions/*
+include pydevccu/device_logic/*
 include pydevccu/paramset_descriptions/*
 exclude pydevccu/hmip_xml_to_json.py
 exclude pydevccu/hm_xml_to_json.py
