@@ -1,0 +1,5 @@
+from .HM_Sec_SC_2 import HM_Sec_SC_2
+
+DEVICE_MAP = {
+    "HM-Sec-SC-2": HM_Sec_SC_2
+}
