@@ -3,6 +3,7 @@ Version 0.0.4
 - Raise exception in `getValue` if queried parameter does not exist
 - Device addresses are now case insensitive
 - Add callback-support based on fired events
+- Add automated device logic for HM-Sec-SC-2
 
 Version 0.0.3 (2019-12-25)
 - Fix `getParamset` for `MASTER`, returns default or value from `putParamset`
